--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-.attribution { font-size: 11px; text-align: center; }
-.attribution a { color: hsl(228, 45%, 44%); }
 :root {
     /* colors Primary */
     --Very-dark-grayish-blue: hsl(217, 19%, 35%);
@@ -23,6 +21,27 @@ main {
     margin: 64px;
     font-family: 'Barlow Semi Condensed', sans-serif;
     gap: 32px;
+}
+
+.container-buttons {
+    display: flex;
+    flex-direction: row;
+    height: 40px;
+    gap: 32px;
+    justify-content: center;
+    margin-bottom: 32px;
+}
+
+.button {
+    display: block;
+    width: 100px;
+    background-color: var(--Very-dark-blackish-blue);
+    color: var(--White);
+    border-radius: 10px;
+}
+
+.button-disable {
+    display: none;
 }
 
 .section-primary {
